--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest"
   },
   "dependencies": {
     "sass": "^1.52.1",
@@ -13,10 +14,21 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.23.1",
+    "@babel/core": "^7.18.0",
+    "@babel/preset-env": "^7.18.0",
+    "@babel/preset-typescript": "^7.17.12",
+    "@types/jest": "^27.5.1",
     "@vitejs/plugin-vue": "^2.3.3",
+    "@vue/test-utils": "2.0.0-rc.18",
+    "babel-core": "^6.26.3",
+    "babel-jest": "26",
     "eslint": "^8.16.0",
+    "jest": "26",
+    "ts-jest": "26",
     "typescript": "^4.5.4",
     "vite": "^2.9.9",
+    "vue-jest": "5.0.0-alpha.10",
+    "vue-template-compiler": "^2.6.14",
     "vue-tsc": "^0.34.7"
   }
 }
